change java version to 11 and adapt code