@@ -28,7 +28,7 @@ public class InventoryService {
                             .skuCode(inventory.getSkuCode())
                             .isInStock(inventory.getQuantity() > 0)
                             .build()
-                ).toList();
+                ).collect(Collectors.toList());
         Set<String> inStockSkuCodes = inventoryResponses.stream()
                 .filter(InventoryResponse::isInStock)
                 .map(InventoryResponse::getSkuCode)
